--- a/cartoon-pizza-y-frutas-website/src/components/topbar.css
+++ b/cartoon-pizza-y-frutas-website/src/components/topbar.css
@@ -1,5 +1,7 @@
 .topbar-container{
-    background-color: rgb(22,22,22);    
+    background-color: rgb(22,22,22);  
+    box-shadow: 0px 0px 13px 1px rgba(255, 255, 255, 0.65);
+    z-index: 2;
 }
 
 .container{
