--- a/cartoon-pizza-y-frutas-website/src/components/Contacto/contacto.css
+++ b/cartoon-pizza-y-frutas-website/src/components/Contacto/contacto.css
@@ -12,11 +12,7 @@
 /* CONTACTO */
 .contenedor {
   background: url("./background_one.png");
-  width: 100%;
-  margin: 0 auto;
-  /*padding: 30px;*/
-  /*background: #fdfdd9;*/
-  padding: 60px 0;
+  width: 100%;    
 }
 .contenedor h1 {
   text-align: center;
@@ -24,15 +20,16 @@
   margin-bottom: 20px;
   font-weight: 600;
 }
+
+.contenedor-general-contacto{
+  background-color: rgba(0, 0, 0, 0.25);
+  margin: 0 auto;  
+  padding: 60px 0;
+}
+
 .contenedor-formulario {
   width: 50%;
-  margin: 0 auto;
-  /*-webkit-box-shadow: 0px 2px 19px 4px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 2px 19px 4px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 2px 19px 4px rgba(0, 0, 0, 0.75);*/
-  -webkit-box-shadow: 0px 2px 277px 140px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 2px 277px 140px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 2px 277px 140px rgba(0, 0, 0, 0.75);
+  margin: 0 auto;  
   padding: 30px;
   border-radius: 10px;
   background: rgba(246, 246, 246, 0.9);
