--- a/cartoon-pizza-y-frutas-website/src/components/Inicio/commentaries.css
+++ b/cartoon-pizza-y-frutas-website/src/components/Inicio/commentaries.css
@@ -1,6 +1,7 @@
 .testimonios{  
     width: 100%; 
-    height: auto;      
+    height: auto;   
+    box-shadow: -1px 0px 22px 1px rgba(0, 0, 0, 0.75);   
 }
 
 .cliente{   
