--- a/cartoon-pizza-y-frutas-website/src/components/footer.css
+++ b/cartoon-pizza-y-frutas-website/src/components/footer.css
@@ -12,13 +12,13 @@ footer {
     padding: 50px 15px;
   }
   
-  .contenido-footer .logo {
+  .contenido-footer .logo_footer {
     height: 80px;
     width: auto;
     margin: auto;
   }
   @media (max-width: 940px) {
-    .contenido-footer .logo {
+    .contenido-footer .logo_footer {
       width: auto;
       margin: auto;
       margin-bottom: 20px;
