proteccion rutas reserva y preguntas

--- a/cartoon-pizza-y-frutas-website/src/components/Contacto/mostrar-info-contacto.css
+++ b/cartoon-pizza-y-frutas-website/src/components/Contacto/mostrar-info-contacto.css
@@ -4,6 +4,12 @@ h1.titulo-preguntas {
   text-transform: uppercase;
   margin-top: 1.25rem;
 }
+.m-bottom {
+  margin-bottom: 22.75%;
+}
+.m-bottom p {
+  margin: 0 1.25rem;
+}
 
 .contenedor-preguntas {
   display: grid;
