ajuste de estilos

--- a/cartoon-pizza-y-frutas-website/src/components/Contacto/mostrar-info-contacto.css
+++ b/cartoon-pizza-y-frutas-website/src/components/Contacto/mostrar-info-contacto.css
@@ -7,8 +7,8 @@ h1.titulo-preguntas {
 .m-bottom {
   margin-bottom: 22.75%;
 }
-.m-bottom p {
-  margin: 0 1.25rem;
+.m-bottom h2 {
+  margin: 0 2rem;
 }
 
 .contenedor-preguntas {
