--- a/cartoon-pizza-y-frutas-website/src/components/Servicios/eventsContainer.css
+++ b/cartoon-pizza-y-frutas-website/src/components/Servicios/eventsContainer.css
@@ -3,6 +3,52 @@
     grid-template-columns: repeat(3, 1fr);   
 }
 
+.cards{
+    background-color: transparent;  
+    perspective: 1000px;  
+}
+
+.body{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    border: 1px solid black;
+    box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.637);
+}
+
+.cards:hover .body {
+    border: 2px solid white;
+    transform: rotateY(180deg);
+  }
+
+.front, .back {    
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.front{
+    background-color: white;
+    color: black;
+}
+
+.back{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    background-color: rgb(22, 22, 22);
+    color: white;
+    transform: rotateY(180deg);
+}
+
+.boton-services{
+    margin-top: 80px;
+}
+
 @media (max-width: 1080px) {
     .servicios-container{
         grid-template-columns: 1fr;
