Mejora de animaciones y estilos

--- a/cartoon-pizza-y-frutas-website/src/components/Admin/ordersHistorial.css
+++ b/cartoon-pizza-y-frutas-website/src/components/Admin/ordersHistorial.css
@@ -8,6 +8,10 @@
     margin-bottom: 22.75%;
 }
 
+.card-pedidos:hover{
+    background-color: rgba(161, 161, 161, 0.1);
+}
+
 @media (max-width: 1800px) {
     .historial-container{
         grid-template-columns: repeat(3, 1fr);
